corrected margin -> text align error

--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ div{
     background-color: red;
     color: white;
     font-size: 32px;
-    margin: auto;
+    text-align: center;
     font-weight: 700;
 }
